adjusted landing page message for mobile and removed stretching issue for parallax on desktop

--- a/src/Components/Homepage/HomePage.css
+++ b/src/Components/Homepage/HomePage.css
@@ -100,9 +100,10 @@
 
 .homepage {
 	background-image: url('/images/mountains.png');
-	background-size: cover;
+	background-size: 100vw 100vh;
 	background-position: center center;
 	background-attachment: fixed;
+	background-repeat: no-repeat;
 	width: 100vw;
 	min-height: 94vh;
 }
@@ -632,5 +633,10 @@
 	}
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 600px) {
+	.homepage {
+		background-size: cover;
+		background-position: center;
+		background-attachment: inherit;
+	}
 }
